--- a/user.html
+++ b/user.html
@@ -3496,7 +3496,7 @@ body {
 
 <script type="module">
 import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
-import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
+import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
 
 const firebaseConfig = {
   apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
@@ -3511,108 +3511,83 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 
-document.addEventListener('DOMContentLoaded', () => {
-  // DOM elements for user profile
-  const elements = {
-    userAvatar: document.getElementById('userAvatar'),
-    mobileUserAvatar: document.getElementById('mobileUserAvatar'),
-    userName: document.getElementById('userName'),
-    dropdownAvatar: document.getElementById('dropdownAvatar'),
-    dropdownName: document.getElementById('dropdownName'),
-    dropdownEmail: document.getElementById('dropdownEmail'),
-    mobileUserName: document.getElementById('mobileUserName'),
-    mobileUserEmail: document.getElementById('mobileUserEmail'),
-    welcomeUserSpan: document.getElementById('user')
-  };
+// DOM elements for user profile
+const elements = {
+  userAvatar: document.getElementById('userAvatar'),
+  mobileUserAvatar: document.getElementById('mobileUserAvatar'),
+  userName: document.getElementById('userName'),
+  dropdownAvatar: document.getElementById('dropdownAvatar'),
+  dropdownName: document.getElementById('dropdownName'),
+  dropdownEmail: document.getElementById('dropdownEmail'),
+  mobileUserName: document.getElementById('mobileUserName'),
+  mobileUserEmail: document.getElementById('mobileUserEmail'),
+  welcomeUserSpan: document.getElementById('user')
+};
 
-  // Clear sensitive data from DOM
-  const clearUserProfile = () => {
-    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-    try {
-      if (elements.userName) elements.userName.textContent = '';
-      if (elements.dropdownName) elements.dropdownName.textContent = '';
-      if (elements.mobileUserName) elements.mobileUserName.textContent = '';
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = '';
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = '';
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
+// Clear sensitive data from DOM
+const clearUserProfile = () => {
+  const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
+  try {
+    if (elements.userName) elements.userName.textContent = '';
+    if (elements.dropdownName) elements.dropdownName.textContent = '';
+    if (elements.mobileUserName) elements.mobileUserName.textContent = '';
+    if (elements.dropdownEmail) elements.dropdownEmail.textContent = '';
+    if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = '';
+    if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
 
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = fallbackAvatar;
-          img.removeAttribute('srcset');
-        }
-      });
-    } catch (error) {
-      console.error('Error clearing profile:', error);
-    }
-  };
-
-  // Update user profile on the page
-  const updateUserProfile = (user) => {
-    console.log('Updating user profile with:', user); // Debug log
-    if (!user) {
-      clearUserProfile();
-      return;
-    }
-
-    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-    const displayName = user.displayName || user.email?.split('@')[0] || 'User';
-    const email = user.email || 'No email provided';
-    const photoURL = user.photoURL || fallbackAvatar;
-
-    try {
-      if (elements.userName) elements.userName.textContent = displayName;
-      if (elements.dropdownName) elements.dropdownName.textContent = displayName;
-      if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
-
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = photoURL;
-          img.onerror = () => img.src = fallbackAvatar;
-        }
-      });
-      console.log('Profile updated successfully:', { displayName, email, photoURL }); // Debug log
-    } catch (error) {
-      console.error('Profile update error:', error);
-      if (elements.dropdownEmail) {
-        elements.dropdownEmail.textContent = 'Error loading profile';
-        elements.dropdownEmail.style.color = '#dc2626';
+    [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
+      if (img) {
+        img.src = fallbackAvatar;
+        img.removeAttribute('srcset');
       }
-    }
-  };
+    });
+  } catch (error) {
+    console.error('Error clearing profile:', error);
+  }
+};
 
-  // Listen for auth state changes and update profile
+// Update user profile on the page
+const updateUserProfile = (user) => {
+  if (!user) {
+    clearUserProfile();
+    return;
+  }
+
+  const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
+  const displayName = user.displayName || user.email?.split('@')[0] || 'User';
+  const email = user.email || 'No email provided';
+  const photoURL = user.photoURL || fallbackAvatar;
+
+  try {
+    if (elements.userName) elements.userName.textContent = displayName;
+    if (elements.dropdownName) elements.dropdownName.textContent = displayName;
+    if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
+    if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
+    if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
+    if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
+
+    [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
+      if (img) {
+        img.src = photoURL;
+        img.onerror = () => img.src = fallbackAvatar;
+      }
+    });
+  } catch (error) {
+    console.error('Profile update error:', error);
+  }
+};
+
+// Ensure DOM is loaded before running auth listener
+document.addEventListener('DOMContentLoaded', () => {
   onAuthStateChanged(auth, (user) => {
     console.log('Auth state changed:', user); // Debug log
     if (user) {
       updateUserProfile(user);
     } else {
       clearUserProfile();
-      window.location.href = 'login.html';
     }
   });
-
-  // Logout function
-  window.logout = async () => {
-    try {
-      await signOut(auth);
-      clearUserProfile();
-      window.location.href = 'login.html';
-    } catch (error) {
-      console.error('Logout error:', error);
-      if (elements.dropdownEmail) {
-        elements.dropdownEmail.textContent = 'Error logging out';
-        elements.dropdownEmail.style.color = '#dc2626';
-      }
-    }
-  };
 });
-
-// Export auth for use in other scripts if needed
-export { auth };
 
 </scrip>
 
