--- a/course-1/premium-course-1.html
+++ b/course-1/premium-course-1.html
@@ -1813,274 +1813,59 @@
     </div>
 
 
-  <script>
-    // Mobile Menu Toggle
-    const mobileMenuButton = document.getElementById('mobileMenuButton');
-    const mobileMenu = document.getElementById('mobileMenu');
-    const mobileMenuClose = document.getElementById('mobileMenuClose');
 
-    mobileMenuButton.addEventListener('click', () => {
-      mobileMenu.style.transform = 'translateX(0)';
-    });
 
-    mobileMenuClose.addEventListener('click', () => {
-      mobileMenu.style.transform = 'translateX(100%)';
-    });
 
-    // Profile Dropdown Toggle
-    function toggleDropdown() {
-      const dropdown = document.querySelector('.profile-dropdown');
-      const isVisible = dropdown.style.opacity === '1';
-      dropdown.style.opacity = isVisible ? '0' : '1';
-      dropdown.style.transform = isVisible ? 'translateY(-10px)' : 'translateY(0)';
-      dropdown.style.visibility = isVisible ? 'hidden' : 'visible';
-    }
 
-    // Logout Function (Placeholder)
-    function logout() {
-      console.log('Logout clicked');
-      // Implement logout logic here
-    }
 
-    // New Section: Read More Toggle
-    const readMoreLink = document.querySelector('.read-more-link');
-    const outcomesList = document.querySelector('.outcomes-list');
-    readMoreLink.addEventListener('click', (e) => {
-      e.preventDefault();
-      const isOpen = outcomesList.classList.contains('visible');
-      outcomesList.classList.toggle('visible');
-      readMoreLink.classList.toggle('read-more-link-open');
-      readMoreLink.querySelector('span').textContent = isOpen ? 'Show More' : 'Show Less';
-    });
+ <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
+    import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
+    import { getFirestore, doc, setDoc, updateDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
 
-    // New Section: Accordion Functionality
-    const accordionItems = document.querySelectorAll('.accordion-item');
-    accordionItems.forEach(item => {
-      const header = item.querySelector('.accordion-header');
-      header.addEventListener('click', () => {
-        const isActive = item.classList.contains('active');
-        accordionItems.forEach(i => {
-          i.classList.remove('active');
-          i.querySelector('.accordion-content').style.maxHeight = '0';
-          i.querySelector('.accordion-content').style.opacity = '0';
-          i.querySelector('.accordion-content').style.padding = '0 calc(var(--spacing-unit) * 3)';
-        });
-        if (!isActive) {
-          item.classList.add('active');
-          const content = item.querySelector('.accordion-content');
-          content.style.maxHeight = '600px';
-          content.style.opacity = '1';
-          content.style.padding = 'calc(var(--spacing-unit) * 2.5) calc(var(--spacing-unit) * 3)';
-        }
-      });
-    });
+    const firebaseConfig = {
+      apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
+      authDomain: "syncskilll.firebaseapp.com",
+      projectId: "syncskilll",
+      storageBucket: "syncskilll.firebasestorage.app",
+      messagingSenderId: "203322315096",
+      appId: "1:203322315096:web:958fc7d94806ef9a98552d",
+      measurementId: "G-JWWWM2ZQSK"
+    };
 
-    // Placeholder for loadFileData (requires XLSX library)
-    function loadFileData(file) {
-      const reader = new FileReader();
-      reader.onload = function(e) {
-        const data = new Uint8Array(e.target.result);
-        const workbook = XLSX.read(data, { type: 'array' });
-        const firstSheet = workbook.SheetNames[0];
-        const worksheet = workbook.Sheets[firstSheet];
-        const jsonData = XLSX.utils.sheet_to_json(worksheet);
-        console.log('Parsed Excel Data:', jsonData);
-        // Process jsonData as needed
-      };
-      reader.readAsArrayBuffer(file);
-    }
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
 
-    // Example: Handle file input for loadFileData
-    // Uncomment and add an input element in HTML if needed
-    /*
-    const fileInput = document.createElement('input');
-    fileInput.type = 'file';
-    fileInput.accept = '.xlsx,.xls';
-    fileInput.addEventListener('change', (e) => {
-      const file = e.target.files[0];
-      if (file) {
-        loadFileData(file);
+    let currentUser = null;
+
+    onAuthStateChanged(auth, (user) => {
+      if (!user) {
+        window.location.href = '/login.html';
+        return;
       }
+      currentUser = user;
     });
-    document.body.appendChild(fileInput);
-    */
-  </script>
 
-
-
-
-
-   <script type="module">
-   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
-import { 
-  getAuth, 
-  onAuthStateChanged, 
-  signOut 
-} from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
-
-const firebaseConfig = {
-  apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
-  authDomain: "syncskilll.firebaseapp.com",
-  projectId: "syncskilll",
-  storageBucket: "syncskilll.firebasestorage.app",
-  messagingSenderId: "203322315096",
-  appId: "1:203322315096:web:958fc7d94806ef9a98552d",
-  measurementId: "G-JWWWM2ZQSK"
-};
-
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-
-// DOM Elements
-const elements = {
-  mobileMenu: document.getElementById('mobileMenu'),
-  mobileMenuButton: document.getElementById('mobileMenuButton'),
-  mobileMenuClose: document.getElementById('mobileMenuClose'),
-  userAvatar: document.getElementById('userAvatar'),
-  mobileUserAvatar: document.getElementById('mobileUserAvatar'),
-  userName: document.getElementById('userName'),
-  dropdownAvatar: document.getElementById('dropdownAvatar'),
-  dropdownName: document.getElementById('dropdownName'),
-  dropdownEmail: document.getElementById('dropdownEmail'),
-  mobileUserName: document.getElementById('mobileUserName'),
-  mobileUserEmail: document.getElementById('mobileUserEmail')
-};
-
-// Update user profile
-const updateUserProfile = (user) => {
-  if (!user) return;
-  
-  const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-  const displayName = user.displayName || user.email?.split('@')[0] || 'User';
-  const email = user.email || 'No email provided';
-  const photoURL = user.photoURL || fallbackAvatar;
-
-  try {
-    if (elements.userName) elements.userName.textContent = displayName;
-    if (elements.dropdownName) elements.dropdownName.textContent = displayName;
-    if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
-    if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
-    if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
-
-    [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-      if (img) {
-        img.src = photoURL;
-        img.onerror = () => img.src = fallbackAvatar;
+    async function payNow() {
+      if (!currentUser) {
+        alert('User not authenticated!');
+        return;
       }
-    });
-  } catch (error) {
-    console.error('Profile update error:', error);
-  }
-};
 
-// Handle auth state
-const handleAuthState = (user) => {
-  if (!user || localStorage.getItem('isLoggedIn') !== 'true') {
-    localStorage.removeItem('isLoggedIn');
-    window.location.href = '/login.html';
-    return;
-  }
-  updateUserProfile(user);
-};
+      try {
+        // Simulate payment success - update Firestore payment document for this user
+        const paymentRef = doc(db, 'payments', currentUser.uid);
 
-// Initialize auth listener
-onAuthStateChanged(auth, handleAuthState);
+        // Update the course1 payment to true
+        await setDoc(paymentRef, { courses: { course1: true } }, { merge: true });
 
-// Mobile menu toggle
-const toggleMobileMenu = () => {
-  if (elements.mobileMenu) {
-    const isOpen = elements.mobileMenu.style.transform === 'translateX(0px)';
-    elements.mobileMenu.style.transform = isOpen ? 'translateX(100%)' : 'translateX(0)';
-  }
-};
-
-// Dropdown toggle
-window.toggleDropdown = () => {
-  const dropdown = document.querySelector('.profile-dropdown');
-  if (dropdown) {
-    const isVisible = dropdown.style.opacity === '1';
-    dropdown.style.opacity = isVisible ? '0' : '1';
-    dropdown.style.transform = isVisible ? 'translateY(-10px)' : 'translateY(0)';
-    dropdown.style.visibility = isVisible ? 'hidden' : 'visible';
-  }
-};
-
-// Close dropdown on outside click
-document.addEventListener('click', (e) => {
-  const profileMenu = document.querySelector('.profile-menu');
-  if (profileMenu && !e.target.closest('.profile-menu')) {
-    const dropdown = document.querySelector('.profile-dropdown');
-    if (dropdown) {
-      dropdown.style.opacity = '0';
-      dropdown.style.transform = 'translateY(-10px)';
-      dropdown.style.visibility = 'hidden';
+        alert('Payment successful! Redirecting to premium course...');
+        window.location.href = './premium-course-1.html';
+      } catch (error) {
+        console.error('Payment failed:', error);
+        alert('Payment failed. Please try again.');
+      }
     }
-  }
-});
-
-// Event listeners
-if (elements.mobileMenuButton) elements.mobileMenuButton.addEventListener('click', toggleMobileMenu);
-if (elements.mobileMenuClose) elements.mobileMenuClose.addEventListener('click', toggleMobileMenu);
-
-// Close mobile menu on outside click or ESC
-document.addEventListener('click', (e) => {
-  if (elements.mobileMenu && elements.mobileMenuButton && 
-      !elements.mobileMenu.contains(e.target) && 
-      !elements.mobileMenuButton.contains(e.target) && 
-      window.innerWidth <= 768) {
-    elements.mobileMenu.style.transform = 'translateX(100%)';
-  }
-});
-
-document.addEventListener('keydown', (e) => {
-  if (e.key === 'Escape' && window.innerWidth <= 768 && elements.mobileMenu) {
-    elements.mobileMenu.style.transform = 'translateX(100%)';
-  }
-});
-
-window.addEventListener('resize', () => {
-  if (window.innerWidth > 768 && elements.mobileMenu) {
-    elements.mobileMenu.style.transform = 'translateX(100%)';
-  }
-});
-
-// Logout function
-window.logout = async () => {
-  try {
-    await signOut(auth);
-    localStorage.removeItem('isLoggedIn');
-    window.location.href = '/login.html';
-  } catch (error) {
-    console.error('Logout error:', error);
-    alert('Error during logout. Please try again.');
-  }
-};
-
-// Session timeout
-let inactivityTimer;
-const resetSessionTimer = () => {
-  clearTimeout(inactivityTimer);
-  inactivityTimer = setTimeout(() => window.logout(), 3600000); // 1 hour
-};
-
-['mousemove', 'keydown', 'scroll', 'touchstart'].forEach(event => {
-  window.addEventListener(event, resetSessionTimer);
-});
-
-resetSessionTimer();
-
-// Initial auth check
-document.addEventListener('DOMContentLoaded', () => {
-  const loadingOverlay = document.createElement('div');
-  loadingOverlay.style = 'position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.8); z-index: 9999; display: flex; align-items: center; justify-content: center;';
-  loadingOverlay.innerHTML = '<p>Loading...</p>';
-  document.body.appendChild(loadingOverlay);
-
-  onAuthStateChanged(auth, (user) => {
-    loadingOverlay.remove();
-    handleAuthState(user);
-  });
-});
-  </script>
 </body>
 </html>
